--- a/web/src/styles/pages/landing.css
+++ b/web/src/styles/pages/landing.css
@@ -44,22 +44,45 @@
   line-height: 34px;
 }
 
-.content-wrapper .location {
-  position: absolute;
-  right: 0;
-  top: 0;
+#page-landing .content-wrapper .header-content {
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  justify-content: space-between;
+}
 
-  font-size: 24px;
-  line-height: 34px;
+#page-landing .content-wrapper .header-content button {
+  width: 222px;
+  height: 56px;
+  background: #12D4E0;
+  border-radius: 20px;
+  border:0;
 
+  color: #ffffff;
+  font-weight: 800;
+  font-size: 20px;
+
+  cursor: pointer;
+
+  transition: background-color 0.5s;
+}
+
+#page-landing .content-wrapper .header-content button:hover {
+  background: #96FEFF;
+  color: #15C3D6;
+}
+
+#page-landing .content-wrapper .header-content .image-location {
+  display: flex;
+  align-items: center;
+  width: 400px;
+}
+
+#page-landing .content-wrapper .header-content .image-location .location {
   display: flex;
   flex-direction: column;
 
-  text-align: right;
-}
-
-.content-wrapper .location strong {
-  font-weight: 800;
+  margin-left: 64px;
 }
 
 .content-wrapper .enter-app {
