Dashboard page styles and changing global styles

--- a/web/src/styles/global.css
+++ b/web/src/styles/global.css
@@ -11,3 +11,8 @@ body {
 body, input, button, textarea {
   font: 600 18px Nunito, sans-serif;
 }
+
+html, body, #root {
+  min-height: 100%;
+  height: 100%;
+}
