--- a/web/src/styles/components/sidebar.css
+++ b/web/src/styles/components/sidebar.css
@@ -1,6 +1,6 @@
 aside.app-sidebar {
-  position: fixed;
-  height: 100%;
+  min-height: 100%;
+  max-height: 820px;
   padding: 32px 24px;
   background: linear-gradient(329.54deg, #15B6D6 0%, #15D6D6 100%);
 
@@ -12,6 +12,7 @@ aside.app-sidebar {
 
 aside.app-sidebar img {
   width: 48px;
+  cursor: pointer;  
 }
 
 aside.app-sidebar footer a,
