--- a/web/src/styles/pages/create-orphanage.css
+++ b/web/src/styles/pages/create-orphanage.css
@@ -19,10 +19,26 @@ form.create-orphanage-form {
   overflow: hidden;
 }
 
-form.create-orphanage-form .leaflet-container {
+form.create-orphanage-form .wrapper-map {
+  height: 291px;
   margin-bottom: 40px;
   border: 1px solid #d3e2e5;
   border-radius: 20px;
+
+  background: #F5F8FA;
+}
+
+form.create-orphanage-form .wrapper-map p {
+  font-size: 14px;
+  color: #0089A5;
+  font-weight: bold;
+  margin-top: 12px;
+  text-align: center;
+}
+
+form.create-orphanage-form .leaflet-container {
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
 }
 
 form.create-orphanage-form fieldset {
